sample-posts-auth/src/index.css
@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
html, body, html * {
  font-family: 'Roboto', sans-serif;
}

* {
  margin: 0;
  padding: 0;
}

pre {
  white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
  white-space: -pre-wrap; /* Opera */
  white-space: -o-pre-wrap; /* Opera */
  white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
  word-wrap: keep-all; /* IE 5.5+ */
  display: inline-block;
  overflow: auto;
  overflow-wrap: anywhere;
}

header, footer {
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
  padding: 1.5rem;
  text-align: center;
}

p {
  padding: 0.75rem 0rem;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

ul * {
  margin: 0rem 2rem;
}

li {
  float: left;
}

.content-body {
  min-height: 86vh;
  min-width: 100%;
  display: flex;
  align-items: center;
}

.right-align {
  float: right;
  margin-right: 1rem;
}

.posts-container {
  flex-wrap: wrap;
  max-width: 80rem;
  margin: auto;
  padding: 0.5rem;
  border-radius: 6px;
}

.post {
  max-width: 50rem;
  margin: 1rem auto;
  padding: 2.5rem;
  border-radius: 6px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

.post-image {
  max-width: 100%;
}

.message-container {
  text-align: center;
  width: 100%;
}

.message-text {
  font-size: 24px;
}

.form {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 25rem;
  margin: auto;
  padding: 2rem;
  border-radius: 6px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
  gap: 20px;
}

.form-header {
  text-align: center;
  margin: 10px 10px;
}

.form-field {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.form-input {
  padding: 0.5rem 0.5rem;
  font-size: 16px;
}

.form-button {
  margin-top: 20px;
  padding: 0.50rem 2rem;
  color: black;
  font-size: 16px;
}

.form-link {
  text-decoration: none;
  text-align: center;
}

.form-details {
  text-align: center;
}

.form-check {
  display: flex;
  gap: 0.5rem;
  font-size: 15px;
  float: right;
}

.pre-body {
  width: 80rem;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
  margin: auto;
  margin-top: 50px;
  margin-bottom: 50px;
  padding: 2rem;
}

.link {
  margin: 0;
  padding: 0;
  overflow: hidden;
  float: left;
  text-decoration: none;
}

.profile-container {
  text-align: center;
  margin-bottom: 5px;
}
.profile-img {
  max-width: 50%;
  border-radius: 50%;
  border-style: solid;
  border-width: 2px;
}

